plugins {
    id 'java'
    id 'java-library'
    id 'org.springframework.boot' version '4.0.1'
    id 'io.spring.dependency-management' version '1.1.7'
    id "org.sonarqube" version "7.2.2.6593"
    id 'com.diffplug.spotless' version "${spotlessVersion}"
    id 'org.flywaydb.flyway' version "${flywayVersion}"
    id 'jacoco'
}

allprojects {
    group = 'com.huddey.core'
    version = '0.0.2-SNAPSHOT'

    repositories {
        mavenCentral()
    }
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

configurations {
    if (configurations.findByName("annotationProcessor") != null) {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }
    if (configurations.findByName("developmentOnly") == null) {
        developmentOnly
    }
}

dependencies {
    // Spring Boot Dependencies
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-security-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-flyway'
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    //implementation 'org.springframework.boot:spring-boot-starter-opentelemetry'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.21.0'

    // AWS Dependencies
    implementation platform('software.amazon.awssdk:bom:2.20.47')
    implementation "software.amazon.awssdk:ses:${awsSdkVersion}"
    implementation "software.amazon.awssdk:core:${awsSdkVersion}"
    implementation 'software.amazon.awssdk:sns'

    // Micrometer Dependencies
    implementation 'io.micrometer:micrometer-tracing-bridge-brave'
    implementation 'org.springframework.boot:spring-boot-starter-jackson'

    // JWT Dependencies
    implementation "me.paulschwarz:spring-dotenv:${dotEnvVersion}"
    implementation "io.jsonwebtoken:jjwt-api:${jwtVersion}"
    runtimeOnly "io.jsonwebtoken:jjwt-impl:${jwtVersion}"
    runtimeOnly "io.jsonwebtoken:jjwt-jackson:${jwtVersion}"
    
    // Stripe Dependencies
    implementation 'com.stripe:stripe-java:29.3.0'

    runtimeOnly "org.flywaydb:flyway-database-postgresql:${flywayVersion}"
    implementation 'org.postgresql:postgresql'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // Tests
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-flyway-test'
    testImplementation 'com.h2database:h2'
    testImplementation "org.testcontainers:testcontainers:${testContainersVersion}"
    testImplementation "org.testcontainers:junit-jupiter:${testJupiterContainersVersion}"
    testImplementation "org.testcontainers:postgresql:${testJupiterContainersVersion}"
}

spotless {
    java {
        target 'src/**/*.java'
        googleJavaFormat("${googleJavaFormatVersion}")
        removeUnusedImports()
        importOrder('java', 'javax', 'org', 'com')
        trimTrailingWhitespace()
        endWithNewline()
    }
}

tasks.named("build") {
    dependsOn("spotlessCheck")
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.matching { it.name == 'prepareKotlinBuildScriptModel' }.configureEach {
    enabled = false
}

jacocoTestReport {
    reports {
        xml.required = true
        html.required = true
    }
    dependsOn test
}

test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
    jvmArgs '-javaagent:' + configurations.testRuntimeClasspath.find { it.name.contains('mockito-core') }
}


sonar {
    properties {
        property "sonar.projectKey", "global-jcraft_userman"
        property "sonar.organization", "global-jcraft"
        property "sonar.host.url", "https://sonarcloud.io"
        property "sonar.java.binaries", "build/classes"
        property "sonar.java.test.binaries", "build/classes/java/test"
        property "sonar.tests", "src/test/java"
        property "sonar.coverage.jacoco.xmlReportPaths", "build/reports/jacoco/test/jacocoTestReport.xml"
        property "sonar.junit.reportPaths", "build/test-results/test"
    }
}